# blinky

./: Cargo.toml  README.md  openocd.cfg
.cargo/: config
src/: main.rs
